@@ -30,31 +30,30 @@ pkgconfig_DATA = gtk-doc.pc
 aclocaldir = $(datadir)/aclocal
 aclocal_DATA = gtk-doc.m4
 
-EXTRA_DIST= \
-	MAINTAINERS	\
-	gtk-doc.pc.in	\
-	gtk-doc.spec.in	\
-	gtk-doc.spec	\
-	gtk-doc.dcl  	\
-	gtk-doc.xsl	\
-	devhelp.xsl	\
-	home.png	\
-	left.png	\
-	right.png	\
-	up.png		\
-	gtk-doc.m4
-
-dist-hook:
-	mkdir $(distdir)/doc
-	cp -pr $(srcdir)/doc/* $(distdir)/doc
-	rm -rf $(distdir)/doc/CVS
-	mkdir $(distdir)/db2man
-	cp -pr $(srcdir)/db2man/* $(distdir)/db2man
-	rm -rf $(distdir)/db2man/CVS
-	mkdir $(distdir)/examples
-	cp -pr $(srcdir)/examples/* $(distdir)/examples
-	rm -rf $(distdir)/examples/CVS
-	mkdir $(distdir)/tools
-	cp -pr $(srcdir)/tools/* $(distdir)/tools
-	rm -rf $(distdir)/tools/CVS
-
+EXTRA_DIST = \
+  MAINTAINERS     \
+  gtk-doc.pc.in   \
+  gtk-doc.m4      \
+  gtk-doc.spec.in \
+  gtk-doc.spec    \
+  gtk-doc.dcl     \
+  gtk-doc.xsl     \
+  devhelp.xsl     \
+  home.png  \
+  left.png  \
+  right.png \
+  up.png    \
+  doc/README            \
+  doc/authors.txt       \
+  doc/gnome.txt         \
+  doc/sections-file.txt \
+  doc/setting-up.txt    \
+  doc/style-guide.txt   \
+  db2man/README            \
+  db2man/docbook-to-man    \
+  db2man/docbook-to-man.ts \
+  examples/README       \
+  examples/Makefile.am  \
+  examples/configure.in \
+  tools/docpercentages.pl \
+  tools/gtk-doc.el
